--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,565 @@
+@import url("https://fonts.cdnfonts.com/css/product-sans");
+@import url("https://fonts.cdnfonts.com/css/avenir-lt-std");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+html {
+  background-color: #161616 !important;
+  scroll-behavior: smooth;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Product sans", "sans-serif";
+  background-color: #161616 !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.red-color {
+  color: #ee4622;
+}
+
+.gray-color {
+  color: #b1b1b1;
+}
+
+.light-color {
+  color: #ffffff;
+}
+
+.dark-color {
+  color: #3a3a3a;
+}
+
+.bg-color {
+  background-color: #161616;
+}
+
+.bg-dropdown-color {
+  background-color: #3a3a3a;
+}
+
+.f-48 {
+  font-size: 48px;
+}
+
+.f-24 {
+  font-size: 24px;
+}
+
+.f-14 {
+  font-size: 14px;
+}
+
+.f-18 {
+  font-size: 18px;
+}
+
+.fw-400 {
+  font-weight: 400;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
+.fw-800 {
+  font-weight: 800;
+}
+
+.ff-avenir {
+  font-family: "Avenir LT Std", sans-serif;
+}
+
+.ff-roboto {
+  font-family: "Roboto", sans-serif;
+}
+
+/* NAVBAR */
+.nav-theme {
+  position: absolute;
+  top: 1%;
+  z-index: 2;
+  width: 100%;
+  background-color: transparent;
+}
+
+.nav-title {
+  text-decoration: none !important;
+  color: white;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.navBtnLogin,
+.navBtnLogin:focus {
+  margin: 0 18px !important;
+  color: "white" !important;
+  background-color: transparent !important;
+  border-color: white !important;
+  border-radius: 5px !important;
+  font-weight: 900 !important;
+  font-size: 14px !important;
+  width: 100px !important;
+}
+
+.navBtnLogin:hover,
+.navBtnLogin:active:focus {
+  background-color: transparent !important;
+  color: rgba(255, 255, 255, 0.705) !important;
+  border-color: rgba(255, 255, 255, 0.705) !important;
+}
+
+.navBtnRegister,
+.navBtnRegister:focus {
+  width: 100px !important;
+  margin: 0 18px !important;
+  color: "white" !important;
+  background-color: #ee4622 !important;
+  border-color: #ee4622 !important;
+  border-radius: 5px !important;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25) !important;
+  font-weight: 900 !important;
+  font-size: 14px !important;
+}
+
+.navBtnRegister:hover,
+.navBtnRegister:active:focus {
+  background-color: #ca482a !important;
+  border-color: #ca482a !important;
+}
+
+
+/* HOME */
+.header-wrapper {
+  background-image: url("./assets/Hero.png");
+  height: 85vh;
+}
+
+.header-desc {
+  text-shadow: 0px 2px 7px rgba(0, 0, 0, 0.5);
+  padding: 15% 30% 0% 30%;
+}
+
+.card-year {
+  font-size: 14px;
+}
+
+.bg-secondary {
+  background-color: #3a3a3a;
+}
+
+/* USER */
+.center-div {
+  color: white;
+  text-align: center;
+  margin: 0 auto;
+  width: 80%;
+}
+
+/* PROFILE */
+.profile-wrapper {
+  padding: 5% 10%;
+  margin-top: 3%;
+}
+
+.profile-heading {
+  font-family: "Product Sans", "sans-serif";
+  font-weight: 700;
+  font-size: 36px;
+  margin-bottom: 5%;
+}
+
+.profile-detail-wrapper {
+  margin-left: 10%;
+}
+
+.profile-detail-heading {
+  font-family: "Product Sans", "sans-serif";
+  color: #c32424;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.profile-detail-content {
+  font-family: "Product Sans", "sans-serif";
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.history-box {
+  background-color: #3a3a3a;
+  padding: 5% 5% 1% 5%;
+}
+
+.history-heading {
+  font-family: "Product Sans", "sans-serif";
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.history-date {
+  font-size: 9px;
+  font-weight: 300;
+}
+
+.history-total {
+  color: #974a4a;
+  font-size: 10px;
+  font-weight: 900;
+  display: inline-block;
+  margin-right: 55%;
+}
+
+.history-status-success {
+  line-height: 2;
+  text-align: center;
+  font-weight: 900;
+  padding: 0 6%;
+  font-size: 10px;
+  height: 19px;
+  border-radius: 2px;
+  border-color: #aafad0;
+  background: #aafad0;
+  color: #313131;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.history-status-pending {
+  line-height: 2;
+  text-align: center;
+  font-weight: 900;
+  padding: 0 6%;
+  font-size: 10px;
+  height: 19px;
+  border-radius: 2px;
+  border-color: #ee7863;
+  background: #ee7863;
+  color: #313131;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.history-status-cancel {
+  line-height: 2;
+  text-align: center;
+  font-weight: 900;
+  padding: 0 6%;
+  font-size: 10px;
+  height: 19px;
+  border-radius: 2px;
+  border-color: #f54323;
+  background: #f54323;
+  color: #313131;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+/* Other */
+.red-btn {
+  font-family: "Avenir LT Std", sans-serif;
+  font-weight: 800;
+  background-color: #ee4622;
+  border-color: transparent;
+}
+
+.orange-btn {
+  font-family: "Avenir LT Std", sans-serif;
+  font-weight: 800;
+  border-color: transparent;
+  background-color: #f58033;
+}
+
+#a-register {
+  color: #b1b1b1;
+  font-weight: 800;
+  text-decoration: none;
+}
+
+select:required:invalid {
+  color: #d2d2d2;
+}
+
+select:required:invalid {
+  color: #d2d2d2;
+}
+
+option {
+  color: #161616;
+}
+
+option[value=""][disabled] {
+  display: none;
+}
+
+.progress-bar {
+  color: #ee4622 !important;
+  overflow: visible;
+  background-color: transparent !important;
+}
+
+.rc-slider-handle,
+.rc-slider-track {
+  background-color: #ee4622 !important;
+}
+
+#dropdown-basic,
+#dropdown-basic:active {
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.btn-primary:active:focus,
+.btn-primary:focus,
+.show>.btn-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.25rem rgb(49 132 253 / 0%);
+}
+
+.dropdown-item:focus,
+.dropdown-item:hover {
+  background-color: #474747;
+}
+
+.dropdown-toggle::after {
+  display: none;
+}
+
+.dropdown-menu {
+  background-color: #3a3a3a;
+  color: white;
+}
+
+.dropdown-item {
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+}
+
+hr:not([size]) {
+  height: 3px;
+}
+
+.dropdown-menu:after {
+  position: absolute;
+  top: -6px;
+  left: 125px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #3a3a3a;
+  border-left: 6px solid transparent;
+  content: "";
+}
+
+.dropdown-menu-admin:after {
+  position: absolute;
+  top: -6px;
+  left: 15px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-left: 6px solid transparent;
+  content: "";
+}
+
+.navbar-expand .navbar-nav .dropdown-menu {
+  position: absolute;
+  left: -90px;
+}
+
+.table-dark {
+  --bs-table-bg: #2b2b2b;
+  --bs-table-striped-bg: #3a3a3a;
+  --bs-table-striped-color: #fff;
+  --bs-table-active-bg: #373b3e;
+  --bs-table-active-color: #fff;
+  --bs-table-hover-bg: #323539;
+  --bs-table-hover-color: #fff;
+  color: #fff;
+  border-color: #373b3e;
+}
+
+tbody,
+td,
+tfoot,
+th,
+thead,
+tr {
+  font-weight: bold;
+  border-color: lightgray;
+  border-style: solid;
+  border-width: 0px;
+}
+
+.form-color {
+  background-color: rgba(210, 210, 210, 0.25);
+  border: 2px solid #d2d2d2;
+  border-radius: 5px;
+}
+
+.form-control,
+.form-select,
+.form-control:focus {
+  color: #fff;
+  background-color: rgba(210, 210, 210, 0.25);
+}
+
+.form-color::placeholder {
+  color: #d2d2d2;
+  opacity: 1;
+}
+
+.form-select {
+  background-image: url("./assets/IconActionSelect.png");
+}
+
+.upload-btn,
+.upload-btn:hover,
+.upload-btn:active,
+.upload-btn:focus,
+.upload-btn:active:focus {
+  background: rgba(210, 210, 210, 0.25);
+  border: 2px solid #d2d2d2;
+  color: #d2d2d2;
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 5px;
+  padding: 3px;
+  font-size: 15px;
+}
+
+.upload-btn-icon {
+  margin-left: 70px;
+  width: 15px;
+  height: 24px;
+}
+
+.thumbnail-img {
+  width: inherit;
+  height: 9.375rem;
+  object-fit: cover;
+}
+
+.card-body {
+  padding: 0;
+}
+
+.card:hover {
+  box-shadow: 0px 0px 15px #888787;
+}
+
+.prev-img {
+  width: 22rem;
+  height: auto;
+  object-fit: cover;
+}
+
+.input-filter {
+  color: #cac3c3;
+  background-color: rgba(210, 210, 210, 0.25);
+  border-radius: 5px;
+  border-style: solid;
+}
+
+/* CHAT */
+.img-contact {
+  width: 50px !important;
+  height: 50px !important;
+  object-fit: cover !important;
+}
+
+.img-chat {
+  width: 40px !important;
+  height: 40px !important;
+  object-fit: cover !important;
+}
+
+.text-contact {
+  font-size: 14px;
+}
+
+.text-contact-chat {
+  color: #ababab;
+}
+
+.contact {
+  display: flex;
+  align-items: center;
+}
+
+.contact img {
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.contact ul {
+  list-style-type: none;
+}
+
+.contact:hover {
+  background-color: #212121;
+  transition: 0.5s;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.contact:active {
+  background-color: #3d3d3d;
+  transition: 0.3s;
+}
+
+.contact-active {
+  background-color: #212121;
+  border-radius: 5px;
+}
+
+.input-message {
+  width: 100%;
+  height: 90%;
+  background: rgba(171, 171, 171, 0.15) !important;
+  border: none;
+  color: #ffffff !important;
+}
+
+.chat-me {
+  position: relative;
+  background: #262626;
+  border-radius: 5px;
+  padding: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  max-width: 400px;
+}
+
+.chat-me::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  right: -15px;
+  border-top: 15px solid transparent;
+  border-left: 20px solid #262626;
+  border-bottom: 15px solid transparent;
+}
+
+.chat-other {
+  position: relative;
+  background: #575757;
+  border-radius: 5px;
+  margin-left: 10px;
+  padding: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  max-width: 400px;
+}
+
+.chat-other::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: -15px;
+  border-top: 15px solid transparent;
+  border-right: 20px solid #575757;
+  border-bottom: 15px solid transparent;
 }
